--- a/index.html
+++ b/index.html
@@ -11,21 +11,71 @@
             text-align: center;
             margin-top: 50px;
             color: #333;
+            animation: fadeIn 1.5s ease-in-out;
         }
+
         h1 {
             color: #2c3e50;
             font-size: 2.5em;
+            opacity: 0;
+            animation: fadeIn 2s ease-in-out forwards;
+            animation-delay: 0.5s;
         }
+
         p {
             font-size: 1.2em;
             margin: 20px 0;
+            opacity: 0;
+            animation: fadeIn 2s ease-in-out forwards;
+            animation-delay: 1s;
         }
+
         .solution {
             font-size: 1.5em;
             color: #27ae60;
+            opacity: 0;
+            animation: fadeIn 2s ease-in-out forwards;
+            animation-delay: 1.5s;
         }
+
         .emoji {
             font-size: 1.8em;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .emoji:hover {
+            transform: scale(1.3);
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin: 15px 0;
+            opacity: 0;
+            animation: fadeIn 2s ease-in-out forwards;
+            animation-delay: 2s;
+        }
+
+        li:nth-child(1) {
+            animation-delay: 2s;
+        }
+        li:nth-child(2) {
+            animation-delay: 2.3s;
+        }
+        li:nth-child(3) {
+            animation-delay: 2.6s;
+        }
+        li:nth-child(4) {
+            animation-delay: 2.9s;
+        }
+
+        @keyframes fadeIn {
+            to {
+                opacity: 1;
+            }
         }
     </style>
 </head>
