--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </style>
 </head>
 <body>
-    <h1>Jaga Stamina dan Pikiran, Biar Nggak 500 Internal Server Error!</h1>
+    <h1>Jaga Stamina dan Pikiran, Biar Nggak Error(500) Internal Server Error!</h1>
     <p class="emoji">💪 "Ingat! Kalau badan lelah dan pikiran kacau, otak bisa return: 500 Internal Server Error."</p>
     <div class="solution">
         <p>Solusinya?</p>
